# Place

./: CMakeLists.txt  imgui.ini  project.drawio
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp
client/include/: canvas.h  chunk.h  interface.h  slave.h  state.h  texel_batch.h
client/source/: canvas.cpp  chunk.cpp  interface.cpp  slave.cpp  texel_batch.cpp
common/: CMakeLists.txt
common/include/: chunk.h  space.h  texel_batch.h
common/source/: chunk.cpp  space.cpp  texel_batch.cpp
resources/shaders/: net.frag
server/: CMakeLists.txt  main.cpp
server/include/: canvas.h  chunk.h  data.h  slave.h  state.h
server/source/: canvas.cpp  chunk.cpp  data.cpp  slave.cpp
